--- a/dac/demos/01kubernetes/templates/03withRSPVEBS/jenkins-rs.yaml
+++ b/dac/demos/01kubernetes/templates/03withRSPVEBS/jenkins-rs.yaml
@@ -12,12 +12,22 @@ spec:
       labels:
         app: jenkins
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: jenkins
         image: shubhamharnal/jenkins:demo
+        volumeMounts:
+        - name: jenkins-data
+          mountPath: /var/jenkins_home/
+        securityContext:
+          allowPrivilegeEscalation: false
         ports:
         - containerPort: 8080
           protocol: TCP
         - containerPort: 50000
           protocol: TCP
-          
+      volumes:
+      - name: jenkins-data
+        persistentVolumeClaim:
+          claimName: jenkins-pvc
